# sequoia-parser

./: .gitignore  README.md  gsheet_write.py  parse_companies.py  pyproject.toml
